feat: introduce dto layer on identity module
