# docs/swagger.json
@@ -28,7 +28,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/generate_token_usecase.Input"
+                            "$ref": "#/definitions/dto.GenerateTokenInputDTO"
                         }
                     }
                 ],
@@ -44,7 +44,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "string"
+                                            "$ref": "#/definitions/dto.GenerateTokenOutputDTO"
                                         }
                                     }
                                 }
@@ -98,7 +98,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/create_user_usecase.Input"
+                            "$ref": "#/definitions/dto.CreateUserInputDTO"
                         }
                     }
                 ],
@@ -114,7 +114,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/create_user_usecase.Output"
+                                            "$ref": "#/definitions/dto.CreateUserOutputDTO"
                                         }
                                     }
                                 }
@@ -156,7 +156,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/activate_user_usecase.Input"
+                            "$ref": "#/definitions/dto.ActivateUserInputDTO"
                         }
                     }
                 ],
@@ -218,7 +218,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/find_user_usecase.Output"
+                                            "$ref": "#/definitions/dto.FindUserOutputDTO"
                                         }
                                     }
                                 }
@@ -276,7 +276,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/update_user_usecase.Input"
+                            "$ref": "#/definitions/dto.UpdateUserInputDTO"
                         }
                     }
                 ],
@@ -316,12 +316,8 @@
         }
     },
     "definitions": {
-        "activate_user_usecase.Input": {
+        "dto.ActivateUserInputDTO": {
             "type": "object",
-            "required": [
-                "token",
-                "user_id"
-            ],
             "properties": {
                 "token": {
                     "type": "string"
@@ -331,29 +327,21 @@
                 }
             }
         },
-        "create_user_usecase.Input": {
+        "dto.CreateUserInputDTO": {
             "type": "object",
-            "required": [
-                "email",
-                "name",
-                "password"
-            ],
             "properties": {
                 "email": {
                     "type": "string"
                 },
                 "name": {
-                    "type": "string",
-                    "maxLength": 255,
-                    "minLength": 3
+                    "type": "string"
                 },
                 "password": {
-                    "type": "string",
-                    "minLength": 8
+                    "type": "string"
                 }
             }
         },
-        "create_user_usecase.Output": {
+        "dto.CreateUserOutputDTO": {
             "type": "object",
             "properties": {
                 "email": {
@@ -364,6 +352,47 @@
                 },
                 "user_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "dto.FindUserOutputDTO": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.GenerateTokenInputDTO": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.GenerateTokenOutputDTO": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.UpdateUserInputDTO": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
                 }
             }
         },
@@ -403,61 +432,10 @@
                 }
             }
         },
-        "find_user_usecase.Output": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "generate_token_usecase.Input": {
-            "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
         "response.Data": {
             "type": "object",
             "properties": {
                 "data": {}
-            }
-        },
-        "update_user_usecase.Input": {
-            "type": "object",
-            "required": [
-                "name",
-                "password",
-                "userID"
-            ],
-            "properties": {
-                "name": {
-                    "type": "string",
-                    "maxLength": 255,
-                    "minLength": 3
-                },
-                "password": {
-                    "type": "string",
-                    "minLength": 8
-                },
-                "userID": {
-                    "type": "integer"
-                }
             }
         }
     },
