# internal/identity/dto/auth_dto.go
@@ -1,0 +1,10 @@
+package dto
+
+type GenerateTokenInputDTO struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type GenerateTokenOutputDTO struct {
+	Token string `json:"token"`
+}
