# internal/identity/usecase/create_user_usecase/data.go
@@ -1,13 +1,13 @@
 package create_user_usecase
 
 type Input struct {
-	Name     string `json:"name" validate:"required,min=3,max=255"`
-	Email    string `json:"email" validate:"required,email"`
-	Password string `json:"password" validate:"required,min=8"`
+	Name     string `validate:"required,min=3,max=255"`
+	Email    string `validate:"required,email"`
+	Password string `validate:"required,min=8"`
 }
 
 type Output struct {
-	Name   string `json:"name"`
-	Email  string `json:"email"`
-	UserID uint64 `json:"user_id"`
+	Name   string
+	Email  string
+	UserID uint64
 }
