# internal/identity/usecase/generate_token_usecase/data.go
@@ -1,8 +1,8 @@
 package generate_token_usecase
 
 type Input struct {
-	Email    string `json:"email" validate:"required,email"`
-	Password string `json:"password" validate:"required"`
+	Email    string `validate:"required,email"`
+	Password string `validate:"required"`
 }
 
 type Output struct {
