# internal/identity/usecase/update_user_usecase/data.go
@@ -1,7 +1,7 @@
 package update_user_usecase
 
 type Input struct {
-	Name     string `json:"name" validate:"required,min=3,max=255"`
-	Password string `json:"password" validate:"required,min=8"`
+	Name     string `validate:"required,min=3,max=255"`
+	Password string `validate:"required,min=8"`
 	UserID   uint64 `validate:"required"`
 }
